# collision_avoidance

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
ca_policy/: README.md
ca_policy/ca_policy/: CMakeLists.txt  package.xml
ca_policy/ca_policy/cfg/: CaObjectFrame.cfg  README.md
ca_policy/ca_policy/include/ca_policy/: ca_bridge.h  ca_policy.h  ca_policy_builder.h  ca_policy_manager.h  ca_policy_normal.h  ca_policy_ros.h  ca_policy_social.h  consts.h  object_frame.h  object_merger.h  obstacles.h
ca_policy/ca_policy/launch/: ca_policy.launch  ca_policy2.launch
ca_policy/ca_policy/param/: ca_policy.yaml  vision_object.yaml
ca_policy/ca_policy/src/: ca_policy.cpp  ca_policy_manager.cpp  ca_policy_node.cpp  ca_policy_normal.cpp  ca_policy_ros.cpp  ca_policy_social.cpp  object_frame.cpp  object_merger.cpp  object_merger_node.cpp  obstacles.cpp  people_obstacle.cpp
ca_policy/ca_policy/test/: op-office-2017-11-02-14-57-39.bag
ca_policy/ca_policy_msgs/: CMakeLists.txt  package.xml
ca_policy/ca_policy_msgs/msg/: CaPolicy.msg
ca_policy/object_bridge_msgs/: CMakeLists.txt  LICENSE  package.xml
ca_policy/object_bridge_msgs/msg/: ObjectMerged.msg  ObjectMergedStamped.msg  ObjectsInFrameMerged.msg  SocialObject.msg  SocialObjectsInFrame.msg
env-hooks/: ros_collision_avoidance.sh.em
laser/: hokuyo_laser.launch
launch/: ros_navigation.launch
launch/includes/: move_base.launch.xml
launch/includes/gmapping/: ros_gmapping.launch.xml
maps/: zizhu1-F4-lab-2017-09-06.pgm
sonar/: hc-sr04.ino
sonar_filter/: CMakeLists.txt  package.xml
sonar_filter/include/sonar_filter/: sonar_filter.h
sonar_filter/launch/: sonar_filter.launch
sonar_filter/param/: sonar_filter.yaml
sonar_filter/src/: sonar_filter.cpp
sonar_filter/test/: sonar_filter_test.bag  utest_sonarfilter.cpp  utest_sonarfilter.test
src/: sonar_filter.cpp
turtlebot_navigation/: CMakeLists.txt  package.xml
turtlebot_navigation/env-hooks/: turtlebot_navigation.sh.em
turtlebot_navigation/launch/: ros_gmapping.launch  ros_navigation.launch
turtlebot_navigation/launch/includes/: move_base.launch.xml
turtlebot_navigation/maps/: zizhu1-F4-lab-2017-09-06.yaml
turtlebot_navigation/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
turtlebot_navigation/sonar/: hc-sr04.ino  sr04_sonar.launch
water_navigation/: CMakeLists.txt  README.md  package.xml
water_navigation/launch/: amcl_demo.launch  amr_phase1_demo.launch  ros_gmapping_slave.launch  view_navigation.launch  water_policy.launch  waterrobot_cartographer.launch  waterrobot_cartographer_sick_lidar_2d.launch
water_navigation/launch/includes/: amcl.launch.xml  move_base.slave.launch.xml  velocity_smoother.launch.xml  velocity_smoother_slave.launch.xml
water_navigation/launch/includes/gmapping/: ros_gmapping.slave.launch.xml
water_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
