<package>
  <name>ros_collision_avoidance</name>
  <version>0.0.1</version>
  <description>ros_collision_avoidance</description>
  <maintainer email="chao.jie.gu@intel.com">Intel</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.intel.com/otc-rse/AMR_ros_collision_avoidance</url>
  <url type="bugtracker">https://github.intel.com/otc-rse/AMR_ros_collision_avoidance/issues</url>
  <author>Gu, Chao Jie</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>

  </export>
</package>
