<package>
  <name>ca_policy</name>
  <version>0.0.1</version>
  <description>Collision avoidance policies to adpter different obstacles</description>
  <maintainer email="wei.zhi.liu@intel.com">Intel</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.intel.com/otc-rse/AMR_ros_collision_avoidance</url>
  <url type="bugtracker">https://github.intel.com/otc-rse/AMR_ros_collision_avoidance/issues</url>
  <author>Liu, Wei Zhi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>object_bridge_msgs</build_depend>
  <build_depend>ca_policy_msgs</build_depend>
  <build_depend>object_pipeline_msgs</build_depend>
  <build_depend>ros_yolo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ca_policy_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>object_bridge_msgs</run_depend>
  <run_depend>object_pipeline_msgs</run_depend>
  <run_depend>ros_yolo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
