<package>
  <name>ca_policy_msgs</name>
  <version>0.1.0</version>
  <description>Messages used by nodes in intelligent collision avoidance.</description>
  <maintainer email="wei.zhi.liu@intel.com">Liu, Wei Zhi</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/people_msgs</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Weizhi Liu</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
<!-- <export>
    <cpp cflags="-I${prefix}/msg/cpp -I${prefix}/srv/cpp"/>
</export>
 -->
</package>
