<package>
  <name>object_bridge_msgs</name>
  <version>0.1.0</version>
  <description>messages merging object pipeline topics into one.</description>
  <maintainer email="wei.zhi.liu@itnel.com">Liu, Wei Zhi</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.intel.com/otc-rse/AMR_ros_collision_avoidance</url>
  <url type="bugtracker">https://github.intel.com/otc-rse/AMR_ros_collision_avoidance/issues</url>
  <author>Liu, Wei Zhi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>object_pipeline_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>object_pipeline_msgs</run_depend>


</package>
